<resources>
    <string name="app_name">l1_guess</string>
    <string name="please_enter_number">please enter number</string>
    <string name="ok">ok</string>
    <string name="bigger">bigger</string>
    <string name="samll">smaller</string>
    <string name="u_get_it">\"u got it \"</string>
    <string name="AlertDialog_messsage">message</string>
    <string name="title_activity_material">MaterialActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Excellent_The_number_is">"Excellent! The number is "</string>
</resources>